# algorithms

./: .gitignore
codeforce/704C_Black_Widow/: README.md
codeforce/792C_Divide_by_Three/: Main.java  README.md
codejam/qual-round/: Cubic_UFB.md  Cubic_UFB.py  Go_Gopher.md  Saving_The_Universe_Again.md  Saving_The_Universe_Again.py  Trouble_Sort.md  Trouble_Sort.py  solution.py
codejam/round1A/: Bit_Party.md  Bit_Party.py  Edgy_Baking.md  Edgy_Baking.py  Waffle_Choppers.md  Waffle_Choppers.py
codejam/round1C/: a.py  b.py  c.py  c_dummy.py
exercise/: binary_indexed_tree.py  binary_search.cpp  binary_search.py  binomial.cpp  combination.cpp  deque.cpp  dfs_bfs.cpp  factorial.cpp  factorial_zeros.cpp  fibonacci.cpp  heap_sort.py  interval_tree.py  k_shortest.py  kmp.py  kth_smallest.py  lcm.cpp  lcs.cpp  linked_list.py  lis.cpp  list.py  matmul.cpp  max_interval.py  nearest_points.py  queue.cpp  segment_tree.py  sort.cpp  sort_thread.c  stack.cpp  string.cpp  topological_sort.py  traversal.cpp  tree.py
exercise/tree/: avl.cpp  splay_sizeheightcount.cpp
hrt/: a.py
jongman/: 6_3_Picnic.cpp  6_5_Board_Cover.cpp  6_8_Clock_Sync.cpp  7_2_Quad_Tree.cpp  7_4_Fence.cpp  7_6_Fan_Meeting.cpp  8_12_Asym_Tiling.cpp  8_14_Poly.cpp  8_2_Wild_Card.cpp  8_5_JLIS.cpp  8_7_PI.cpp  8_9_Quantization.cpp  karatsuba.cpp
leetcode/: leetcode.py  requirements.txt
others/: The_Highest_Conquered_Level.py  load_truck.py  poj_brackets.py
talos/: README.md
talos/cpp/fact/: CMakeLists.txt  fact.h  fact_test.cpp
talos/cpp/order_book/: CMakeLists.txt  README.md  order_book.cpp
(+2411 files in other folders)
